--- a/stockfx/pom.xml
+++ b/stockfx/pom.xml
@@ -1,90 +1,164 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-    <modelVersion>4.0.0</modelVersion>
+	<modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.tintuna</groupId>
-    <artifactId>stockfx</artifactId>
-    <name>stockfx</name>
+	<groupId>com.tintuna</groupId>
+	<artifactId>stockfx</artifactId>
+	<name>stockfx</name>
 
-    <packaging>jar</packaging>
-    <version>1.0-SNAPSHOT</version>
-    
-    <organization>
-        <!-- Used as the 'Vendor' for JNLP generation -->
-        <name>Your Organisation</name>
-    </organization>
+	<packaging>jar</packaging>
+	<version>1.0-SNAPSHOT</version>
 
-    <properties>
-        <slf4j.version>1.6.1</slf4j.version>
-    </properties>
+	<organization>
+		<!-- Used as the 'Vendor' for JNLP generation -->
+		<name>Tintuna</name>
+		<url>http://tintuna.com</url>
+	</organization>
 
-    <build>
-        <plugins>
+	<properties>
+		<slf4j.version>1.6.1</slf4j.version>
+		<eclipselink.version>2.4.0</eclipselink.version>
+	</properties>
 
-            <plugin>
-                <groupId>com.zenjava</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>1.3</version>
-                <configuration>
+	<build>
+		<plugins>
 
-                    <mainClass>com.tintuna.stockfx.MainApp</mainClass>
+			<plugin>
+				<groupId>com.zenjava</groupId>
+				<artifactId>javafx-maven-plugin</artifactId>
+				<version>1.3</version>
+				<configuration>
 
-                    <!-- only required if signing the jar file -->
-                    <keyStoreAlias>example-user</keyStoreAlias>
-                    <keyStorePassword>example-password</keyStorePassword>
-                    <permissions>
-                        <permission>all-permissions</permission>
-                    </permissions>
+					<mainClass>com.tintuna.stockfx.MainApp</mainClass>
 
-                </configuration>
-            </plugin>
+					<!-- only required if signing the jar file -->
+					<keyStoreAlias>example-user</keyStoreAlias>
+					<keyStorePassword>example-password</keyStorePassword>
+					<permissions>
+						<permission>all-permissions</permission>
+					</permissions>
 
-        </plugins>
-    </build>
+				</configuration>
+			</plugin>
+
+		</plugins>
+	</build>
 
 
-    <dependencies>
-    
-        <!-- MigLayout -->
+	<dependencies>
 
-        <dependency>
-            <groupId>com.miglayout</groupId>
-            <artifactId>miglayout-javafx</artifactId>
-            <version>4.2</version>
-        </dependency>
+		<!-- MigLayout -->
 
-        <!-- Apache Commons -->
+		<dependency>
+			<groupId>com.miglayout</groupId>
+			<artifactId>miglayout-javafx</artifactId>
+			<version>4.2</version>
+		</dependency>
 
-        <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-            <version>2.6</version>
-        </dependency>
+		<!-- Apache Commons -->
 
-        <!-- Logging  -->
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
+		</dependency>
 
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${slf4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>jcl-over-slf4j</artifactId>
-            <version>${slf4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>${slf4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.16</version>
-        </dependency>
+		<!-- Logging -->
 
-    </dependencies>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.16</version>
+		</dependency>
 
+		<dependency>
+			<groupId>org.apache.derby</groupId>
+			<artifactId>derby</artifactId>
+			<version>10.9.1.0</version>
+		</dependency>
+		
+<dependency>
+<groupId>org.eclipse.persistence</groupId>
+<artifactId>eclipselink</artifactId>
+<version>${eclipselink.version}</version>
+<scope>compile</scope></dependency>
+<dependency>
+<groupId>org.eclipse.persistence</groupId>
+<artifactId>org.eclipse.persistence.core</artifactId>
+<version>${eclipselink.version}</version>
+<scope>compile</scope></dependency>
+<dependency>
+<groupId>org.eclipse.persistence</groupId>
+<artifactId>org.eclipse.persistence.jpa</artifactId>
+<version>${eclipselink.version}</version>
+<scope>compile</scope></dependency>
+<dependency>
+<groupId>org.eclipse.persistence</groupId>
+<artifactId>org.eclipse.persistence.jpa.modelgen</artifactId>
+<version>${eclipselink.version}</version>
+<scope>compile</scope></dependency>
+<dependency>
+<groupId>org.eclipse.persistence</groupId>
+<artifactId>org.eclipse.persistence.moxy</artifactId>
+<version>${eclipselink.version}</version>
+<scope>compile</scope></dependency>
+<dependency>
+<groupId>org.eclipse.persistence</groupId>
+<artifactId>org.eclipse.persistence.sdo</artifactId>
+<version>${eclipselink.version}</version>
+<scope>compile</scope></dependency>
+<dependency>
+<groupId>org.eclipse.persistence</groupId>
+<artifactId>org.eclipse.persistence.oracle</artifactId>
+<version>${eclipselink.version}</version>
+<scope>compile</scope></dependency>
+<dependency>
+<groupId>org.eclipse.persistence</groupId>
+<artifactId>org.eclipse.persistence.oracle.nosql</artifactId>
+<version>${eclipselink.version}</version>
+<scope>compile</scope></dependency>
+<dependency>
+<groupId>org.eclipse.persistence</groupId>
+<artifactId>org.eclipse.persistence.jpars</artifactId>
+<version>${eclipselink.version}</version>
+<scope>compile</scope></dependency>
+<dependency>
+<groupId>org.eclipse.persistence</groupId>
+<artifactId>org.eclipse.persistence.weaving</artifactId>
+<version>${eclipselink.version}</version>
+<scope>compile</scope></dependency>
+<dependency>
+<groupId>org.eclipse.persistence</groupId>
+<artifactId>org.eclipse.persistence.dbws</artifactId>
+<version>${eclipselink.version}</version>
+<scope>compile</scope></dependency>
+<dependency>
+<groupId>org.eclipse.persistence</groupId>
+<artifactId>org.eclipse.persistence.osgi</artifactId>
+<version>${eclipselink.version}</version>
+<scope>compile</scope></dependency>
+	</dependencies>
+	<repositories>
+		<repository>
+			<id>EclipseLink</id>
+			<url>http://download.eclipse.org/rt/eclipselink/maven.repo</url>
+		</repository>
+	</repositories>
 </project>
