Cleaning up Architecture a bit more with Model with properties that backs the Fx GUI.  And moved sample data into this (just a test for now).
The 'New Portfolio' button works and adds to backing Property on the model.

--- a/stockfx/pom.xml
+++ b/stockfx/pom.xml
@@ -31,7 +31,7 @@
 				<version>1.3</version>
 				<configuration>
 
-					<mainClass>com.tintuna.stockfx.MainApp</mainClass>
+					<mainClass>com.tintuna.stockfx.application.MainApplication</mainClass>
 
 					<!-- only required if signing the jar file -->
 					<keyStoreAlias>example-user</keyStoreAlias>
